--- a/new1.html
+++ b/new1.html
@@ -6,25 +6,8 @@
     <link rel="stylesheet" type="text/css" href="C:\Users\Hindu\Documents\fullstack\css\table.css"/>
     </head>
     <body>
-        <h1>welcome</h1>
-        <table>
-            <caption>personal details</caption>
-            <tr>
-                <th>name</th>
-                <th>age</th>
-                <th>gender</th>
-            </tr>
-            <tr> 
-                <td>hindu</td>
-                <td>20</td>
-                <td >female</td>
-            </tr>
-            <tr>
-                <td>kavi</td>
-                <td>17</td>
-                <td>female</td>
-            </tr>
-        </table>
+        <h1>PERSONAL DETAILS</h1>
+        <script src="tab.js"></script>
         <h2>just click login to play games </h2>
         <a href="https://poki.com/">
             <button style="font-size:25px; background-color:sandybrown; color:gray; border-radius:25px;"
