--- a/mytodo1.html
+++ b/mytodo1.html
@@ -11,7 +11,7 @@
         <ul id="list-container">
            <li>Build an 
             <button onclick="removes(event)">delete</button>
-            <button onclick="change"(this)>Edit</button>
+            <button onclick="change(this)">Edit</button>
         </li>
         </ul>
         <div id ="popup">
