--- a/todo/mytodo1.html
+++ b/todo/mytodo1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="C:\Users\Hindu\Desktop\fullstackinternship\Fullstack-internship\mytodo1.css">
+        <link rel="stylesheet" type="text/css" href="C:\Users\Hindu\Desktop\fullstackinternship\Fullstack-internship\todo\mytodo1.css">
     </head>
     <body>
         <script src=""></script>
@@ -24,7 +24,7 @@
                 display: none;
             }
         </style>
-        <script src="C:\Users\Hindu\Desktop\fullstackinternship\Fullstack-internship\mytodolist1.js">
+        <script src="C:\Users\Hindu\Desktop\fullstackinternship\Fullstack-internship\todo\mytodolist1.js">
         
         </script>
     </body>
